<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">媒体中心</string>
    <string name="nav_browse">浏览</string>
    <string name="nav_storage">内部存储</string>
    <string name="cd_sidebar">侧栏</string>
    <string name="folder_meta">%1$s | %2$d项</string>
    <string name="file_meta">%1$s | %2$s | %3$s</string>
    <string name="filter_all">文件夹</string>
    <string name="filter_image">图片</string>
    <string name="filter_video">视频</string>
    <string name="filter_web">网页</string>
    <string name="filter_text">文本</string>
    <string name="filter_book">电子书</string>
    <string name="filter_music">音乐</string>
    <string name="filter_archive">压缩包</string>
    <string name="filter_apk">安装包</string>
    <string name="filter_recent">最近</string>
    <string name="filter_favorite">收藏</string>
    <string name="filter_search">搜索</string>
    <string name="empty_favorite">还没有收藏的文件\n长按文件可收藏，电视上按菜单键</string>
    <string name="favorite_added">已收藏</string>
    <string name="favorite_removed">已取消收藏</string>
    <string name="cd_favorite">收藏</string>
    <string name="search_hint">输入文件名搜索</string>
    <string name="search_hint_indexed">只搜已索引的文件</string>
    <string name="search_hint_folder">搜索当前文件夹</string>
    <string name="file_missing">已失效，文件已删除或设备已拔出</string>
    <string name="action_favorite">收藏</string>
    <string name="action_unfavorite">取消收藏</string>
    <string name="action_rename">重命名</string>
    <string name="action_move">移动到…</string>
    <string name="action_delete">删除</string>
    <string name="action_remove_record">从列表移除</string>
    <string name="confirm_delete">确定删除“%1$s”？此操作不能恢复。</string>
    <string name="move_no_target">当前目录下没有可移动到的文件夹</string>
    <string name="archive_unsupported_label">压缩包（暂不支持）</string>
    <string name="audio_prev">上一首</string>
    <string name="audio_next">下一首</string>
    <string name="empty_music">暂无音乐文件</string>
    <string name="empty_archive">暂无压缩包</string>
    <string name="empty_apk">暂无安装包</string>
    <string name="empty_recent">还没有最近打开的文件</string>
    <string name="empty_search">输入文件名搜索\n只搜已索引的文件</string>
    <string name="empty_search_none">没有匹配的文件</string>
    <string name="archive_unsupported">目前只能打开 ZIP 压缩包</string>
    <string name="archive_open_failed">无法打开这个压缩包</string>
    <string name="archive_extract_failed">无法解压这个文件</string>
    <string name="allow_unknown_sources">请先允许安装未知应用，再打开安装包</string>
    <string name="action_prev_chapter">上一章</string>
    <string name="action_next_chapter">下一章</string>
    <string name="empty_book">暂无 PDF 或电子书</string>
    <string name="pdf_page">%1$d / %2$d</string>
    <string name="book_chapter">%1$s  %2$d/%3$d</string>
    <string name="error_open_pdf">无法打开这份 PDF</string>
    <string name="error_open_book">无法打开这本电子书，请使用 EPUB 格式</string>
    <string name="action_refresh">刷新</string>
    <string name="action_sort">排序与视图</string>
    <string name="sort_name">按名称排序</string>
    <string name="sort_date">按时间排序</string>
    <string name="sort_type">按类型排序</string>
    <string name="view_list">列表视图</string>
    <string name="view_grid">宫格视图</string>
    <string name="action_add_folder">添加文件夹</string>
    <string name="permission_title">需要访问全部文件</string>
    <string name="permission_message">授权全部文件访问后，才能在文件夹里看到网页、文本和其它文件，并正常打开本地网页。</string>
    <string name="permission_all_files">去开启全部文件访问</string>
    <string name="permission_grant">授予权限</string>
    <string name="empty_gallery">还没有可显示的文件</string>
    <string name="empty_image">还没有图片</string>
    <string name="empty_video">还没有视频</string>
    <string name="empty_folders">还没有文件夹\n授权后会显示相册目录，也可以手动添加</string>
    <string name="empty_need_folder">添加一个文件夹后，即可浏览其中的网页和文本</string>
    <string name="empty_web">暂无网页文件</string>
    <string name="empty_text">暂无文本文件</string>
    <string name="empty_usb">已检测到U盘，授权后即可浏览里面的文件</string>
    <string name="action_open_usb">打开U盘</string>
    <string name="folder_count">%d 项</string>
    <string name="section_header">%1$s | %2$d项</string>
    <string name="text_truncated">文件较大，仅显示前 512KB</string>
    <string name="cd_back">返回</string>
    <string name="cd_badge">类型标记</string>
    <string name="cd_folder">文件夹</string>
    <string name="no_app_to_open">没有可以打开此文件的应用</string>
    <string name="media_open_failed">无法打开这个文件，可能已损坏</string>
    <string name="action_create">新建</string>
    <string name="create_folder">新建文件夹</string>
    <string name="create_text">新建文本</string>
    <string name="create_name_hint">名称</string>
    <string name="create_folder_default">新建文件夹</string>
    <string name="create_text_default">未命名.txt</string>
    <string name="action_ok">确定</string>
    <string name="action_cancel">取消</string>
    <string name="action_edit">编辑</string>
    <string name="action_save">保存</string>
    <string name="text_saved">已保存</string>
    <string name="text_save_failed">保存失败</string>
    <string name="text_read_only">文件较大，仅可阅读前 512KB，不能在这里编辑</string>
    <string name="book_toc">目录</string>
    <string name="book_annotate">标注</string>
    <string name="book_notes">全部标注</string>
    <string name="book_theme_book">原书样式</string>
    <string name="book_theme_night">夜间阅读</string>
    <string name="book_select_first">先选中一段文字，再点标注</string>
    <string name="book_note_hint">备注（可选）</string>
    <string name="book_note_saved">已添加标注</string>
    <string name="book_notes_empty">还没有标注</string>
    <string name="book_delete_note">删除这条标注</string>
    <string name="audio_play">播放</string>
    <string name="audio_pause">暂停</string>
</resources>
